# simple-agent-example

./: .gitignore  QUICKSTART.md  README.md  datasets.json  example_config.json  play.py  pyproject.toml  test_setup.py  train.py
data/sft/: 2048_sft_dataset.jsonl
scripts/: sft.py
src/simple_agent_example/: __init__.py  generate_sft.py  openai_client.py  replay_sft_actions.py  rollout.py  sft.py  tinker_client.py  train.py
src/simple_agent_example/env/: __init__.py  game.py
src/simple_agent_example/envs/: __init__.py  game_2048.py  tic_tac_toe.py
src/simple_agent_example/inference/: __init__.py  play.py
src/simple_agent_example/models/: __init__.py  text_encoder.py
src/simple_agent_example/training/: __init__.py  config.py  config_v2.py  rl_trainer.py  rl_trainer_v2.py
src/simple_agent_example/utils/: __init__.py  logging.py
