[project]
name = "simple-agent-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.1",
    "ipykernel>=7.0.1",
    "numpy>=2.3.4",
    "tinker>=0.2.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "wandb>=0.22.2",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
